# InsightGraph

./: .gitignore  README.md  docker-compose.yml
.github/workflows/: ci.yml
backend/: .env.example  Dockerfile  README.md  pyproject.toml
backend/app/: __init__.py  config.py  graph.py  ingest.py  main.py  state.py
backend/data/faiss_index/: index.faiss  index.pkl
docs/: sample_document.md
frontend/: Dockerfile  next.config.ts
frontend/app/: globals.css  layout.tsx  page.module.css  page.tsx
