[tool.poetry]
name = "insightgraph-backend"
version = "0.1.0"
description = "Agentic RAG Platform - Backend API"
authors = ["Jonathan Ekowo-Apprey"]
readme = "README.md"
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = "^3.11,<3.13"

# LangChain Core
langchain = "^0.3.0"
langchain-core = "^0.3.0"
langchain-community = "^0.3.0"

# LangGraph (Agentic Workflows)
langgraph = "^0.2.0"

# HuggingFace Integration (per user requirement - NOT OpenAI)
langchain-huggingface = "^0.1.0"
sentence-transformers = "^3.0.0"
torch = "^2.0.0"
transformers = "^4.40.0"
huggingface-hub = "^0.23.0"

# Vector Store
faiss-cpu = "^1.8.0"

# API Framework
fastapi = "^0.115.0"
uvicorn = {extras = ["standard"], version = "^0.30.0"}
python-multipart = "^0.0.9"
pydantic = "^2.7.0"
pydantic-settings = "^2.2.0"

# Document Processing
pypdf = "^4.0.0"

# Async & Streaming
sse-starlette = "^2.1.0"

# Utilities
python-dotenv = "^1.0.0"
duckduckgo-search = "^8.1.1"
tenacity = "^9.1.2"
slowapi = "^0.1.9"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-asyncio = "^0.23.0"
httpx = "^0.27.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
